--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@ my skills and enhanced more.
         <div class="hobbies">
         <div class="navbar_3a"><p>(2)Hobbies</p></div>
             <div class="hobbies_content">
-        <pre>I have two hobbies that i enjoy very much: Bike travelling
-and Bodybuilding. Bike travellingis a great way to see new places,meet
-new people,and have fun adventures.Bodybuilding helps me to stay fit,
-healthy,and strong.Both of these hobbies make me happy and confident.  
+        <pre>I have two hobbies that i enjoy very much:
+Bike travelling and Bodybuilding. Bike travelling 
+is a great way to see new places , meet new people, 
+and have fun adventures. Bodybuilding helps me to stay 
+fit , healthy , and strong. Both of these hobbies make 
+me happy and confident.  
         </pre>
         <div class="my_img" style="background-image: url(my_img2.jpg);"></div>
         </div>
